--- a/frontend/src/components/DashboardMenu/index.module.css
+++ b/frontend/src/components/DashboardMenu/index.module.css
@@ -6,7 +6,8 @@
     padding: 10px 8px;
     transition: all 0.3s ease-in-out;
 }
-.linkMenu:hover{
+.linkMenu:hover, .linkMenu:visited, .linkMenu:active, .linkMenu:focus, .linkMenu:focus-visible, .linkMenu:focus-within{
     background-color: #0057a3;
     color: white;
+    text-decoration: none;
 }
