--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,10 @@ a, a:hover {
     text-decoration: none;
 }
 
+.w-100{
+    width: 100%;
+}
+
 .container{
     max-width: 1200px;
     width: 100%;
