completed home page

--- a/frontend/src/components/AuthMenu/index.module.css
+++ b/frontend/src/components/AuthMenu/index.module.css
@@ -9,4 +9,5 @@
 .linkMenu:hover, .linkMenu:visited, .linkMenu:active, .linkMenu:focus, .linkMenu:focus-visible, .linkMenu:focus-within{
     background-color: #0057a3;
     color: white;
+    text-decoration: none;
 }
