--- a/frontend/src/layouts/Auth/index.module.css
+++ b/frontend/src/layouts/Auth/index.module.css
@@ -1,7 +1,9 @@
 .content{
-    min-height: 80vh;
+    min-height: 80dvh;
     padding: 20px 0;
-    background-image: url(/rg-bg.jpg);
+    background-color: #00000069;
+    background-image: url(/admin-bg.png);
+    background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
