--- a/frontend/src/layouts/Dashboard/index.module.css
+++ b/frontend/src/layouts/Dashboard/index.module.css
@@ -1,6 +1,7 @@
 .content{
-    min-height: 80vh;
+    min-height: 80dvh;
     padding: 20px 0;
+    background-color: #efefef;
 }
 .container{
     width: 100%;
