--- a/frontend/src/pages/Auth/Register/index.module.css
+++ b/frontend/src/pages/Auth/Register/index.module.css
@@ -1,3 +1,55 @@
+
+.info_col{
+    background-color: #00437d;
+    width: 450px;
+    max-width: 450px;
+    padding: 15px;
+    color: #fff;
+}
+
+
+.info_col h2{
+    margin-top: 10px;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.info_col h1{
+    margin-top: 10px;
+    margin-bottom: 15px;
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.info_col p{
+    margin-top: 10px;
+}
+
+.info_col p a{
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+
+.info_col p a:hover{
+    opacity: 0.8;
+}
+
+.info_col ol{
+    padding: 0;
+    padding-left: 15px;
+}
+
+.info_col ol li{
+    margin-top: 10px;
+}
+
+.form_col{
+    width: 450px;
+    max-width: 450px;
+    padding: 25px 15px;
+    background-color: #fff;
+}
+
 .formContainer{
     border: 1px solid #ccc;
     width: 100%;
