--- a/frontend/src/pages/Auth/ResetPassword/index.module.css
+++ b/frontend/src/pages/Auth/ResetPassword/index.module.css
@@ -1,5 +1,10 @@
+.form_col{
+    width: 450px;
+    max-width: 450px;
+    background-color: #fff;
+}
+
 .formContainer{
-    border: 1px solid #ccc;
     width: 100%;
     height: 100%;
 }
