--- a/frontend/src/pages/Auth/LoginPage/index.module.css
+++ b/frontend/src/pages/Auth/LoginPage/index.module.css
@@ -49,3 +49,18 @@
     padding: 25px 15px;
     background-color: #fff;
 }
+
+@media screen and (max-width: 600px){
+    .info_col{
+        width: 100%;
+        max-width: 100%;
+        order:2;
+    }
+    
+    .form_col{
+        width: 100%;
+        max-width: 100%;
+        order:1;
+    }
+    
+}
