--- a/frontend/src/pages/Auth/ResetPassword/index.module.css
+++ b/frontend/src/pages/Auth/ResetPassword/index.module.css
@@ -21,3 +21,12 @@
 .formFields{
     padding: 20px;
 }
+
+@media screen and (max-width: 600px){
+    
+    .form_col{
+        width: 100%;
+        max-width: 100%;
+    }
+    
+}
