fixed resubmit of form request and mobile responsive

--- a/frontend/src/components/Student/ScholarshipStatus/index.module.css
+++ b/frontend/src/components/Student/ScholarshipStatus/index.module.css
@@ -133,3 +133,9 @@ div.tab_name {
 .navigation_tabs li.tab_inactive + li:after {
 	background-color: #00437d;
 }
+
+@media screen and (max-width: 600px) {
+	.navigation_tabs{
+		display: flex;
+	}
+}
